Schedule: Fixed zebra table coloring for hidden elements. Fixed table header aligning in modal for IE.

--- a/schedule/style.less
+++ b/schedule/style.less
@@ -12,21 +12,25 @@ table.flight-table {
 	border-spacing: 0;
 	border: none;
 	position: relative;
+
+	@tr-height: 34px;
+
+	&:before {
+		background: -webkit-repeating-linear-gradient(white, white @tr-height, #dddcda @tr-height, #dddcda @tr-height * 2);
+		background: -o-repeating-linear-gradient(white, white @tr-height, #dddcda @tr-height, #dddcda @tr-height * 2);
+		background: -moz-repeating-linear-gradient(white, white @tr-height, #dddcda @tr-height, #dddcda @tr-height * 2);
+		background: repeating-linear-gradient(white, white @tr-height, #dddcda @tr-height, #dddcda @tr-height * 2);
+		height: 100%;
+		width: 100%;
+		content: '';
+		position: absolute;
+		z-index: -1;
+	}
+
 	tr {
 		display: none;
 		position: relative;
-		height: 34px;		
-		&:nth-child(odd) {
-			&:after {
-			  content: "";
-			  position: absolute;			  
-			  left: 0;
-			  width: 100%;
-			  height: 34px;
-			  z-index: -2;
-			  background-color: #dddcda;
-			}
-		}
+		height: @tr-height;		
 		&:hover {
 			background-color: @highlight-color;
 		}
@@ -153,8 +157,8 @@ table.flight-table {
 				position: fixed;
 			    color: white;
 			    z-index: 1;
-				height: 34px;
-				line-height: 34px;
+				height: @tr-height;
+				line-height: @tr-height;
 				margin-top: -17px;
 				background-color: @ya-color;
 				width: 250px;				
@@ -270,9 +274,12 @@ label[for="departures-checkbox"] {
 				padding: 24px 12px;
 				table {
 					border-spacing: 0;
-					width: 100%;
+					width: 100%;					
 					&:last-child {
 						margin-top: 24px;
+					}
+					th {
+						text-align: left;
 					}
 				}
 			}
